2003-09-06  Angus Leeming  <leeming@lyx.org>

	* BufferView_pimpl.h:
	* kbmap.h:
	* kbsequence.h:
	* lyxfunc.h: forward declare LyXKeySym rather than
	#include "frontends/LyXKeySym.h".

	* BufferView_pimpl.C:
	* kbmap.C:
	* kbsequence.C:
	* lyxfunc.C: associated changes.

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* BufferView.[Ch] (ChangeInsets): moved to BufferView_pimpl.[Ch].
	As a result, can remove the #include "insets/inset.h" from BufferView.h

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* BufferView.[Ch] (ChangeInsets): moved to BufferView_pimpl.[Ch].
	As a result, can remove the #include "insets/inset.h" from BufferView.h

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* buffer_funcs.C:
	* buffer.h:
	* bufferlist.C:
	* BufferView.C:
	* bufferview_funcs.C:
	* BufferView_pimpl.C:
	* CutAndPaste.C:
	* lyx_cb.C:
	* lyxfunc.C:
	* paragraph.h:
	* ParagraphParameters.C:
	* tabular.C:
	* text3.C:
	* toc.C:
	* undo_funcs.C:
	* frontends/controllers/ControlDocument.C:
	* insets/insetcaption.C: rearrange the #includes into some sort of
	coherent order.

	* buffer.h: remove #includes ErrorList.h, undo.h

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* support/types.h: add a 'depth_type' typedef, used to store the
	nesting depth of a paragraph.

	* paragraph.h:
	* ParameterStruct.h: use this lyx::depth_type typedef rather than
	defining explicitly.

	* buffer.h:
	* paragraph_funcs.h:
	* ParagraphParameters.h:
	* sgml.h: use lyx::depth_type rather than Paragraph or
	ParameterStruct's depth_type.

	* buffer.h
	* paragraph_funcs.h: no need to #include paragraph.h anymore.

	* BufferView.C:
	* BufferView_pimpl.C:
	* CutAndPaste.C:
	* ParagraphParameters.C:
	* buffer_funcs.C:
	* bufferlist.C:
	* bufferview_funcs.C:
	* lyx_cb.C:
	* lyxfunc.C:
	* tabular.C:
	* text3.C:
	* toc.C:
	* undo_funcs.C:
	* frontends/LyXView.C:
	* frontends/controllers/ControlDocument.C:
	* frontends/controllers/ControlErrorList.C:
	* insets/insetbibitem.C:
	* insets/insetbranch.C: