@@ -1,5 +1,9 @@
 2003-09-06  Angus Leeming  <leeming@lyx.org>
 
+	* QParagraph.C: add Spacing.h and vspace.h includes.
+
+2003-09-06  Angus Leeming  <leeming@lyx.org>
+
 	* QContentPane.C: add a typedef for LyXKeySymPtr.
 
 2003-09-06  Angus Leeming  <leeming@lyx.org>
