@@ -1,3 +1,7 @@
+2003-09-06  Angus Leeming  <leeming@lyx.org>
+
+	* FormParagraph.C: add Spacing.h and vspace.h includes.
+
 2003-09-05  Martin Vermeer  <martin.vermeer@hut.fi>
 
 	* Color.C:
